Thu Apr 20 01:33:47 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.cc: fixed alignment check logic in ::scale(), this 
	fixes segfaults on unaligned blocks.

Wed Apr 19 23:53:28 2006  Tim Janik  <timj@gtk.org>

	* plugins/bseblockutils.cc: new SSE-only plugin which replaces the FPU
	block utils provided by BSE with SSE variants.
	SSE variants are so far supplied for add() and scale() based on SSE
	code by Stefan Westerfeld.

Sat Apr 15 03:29:35 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: propagate PLUGIN_FLAGS, FPU_FLAGS and SSE_FLAGS from
	configure.in to the various plugin types.

	* plugins/Makefile.plugins: updates.

Thu Apr 13 23:57:39 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: install all plugins into the same dir. generate .FPU.
	and .SSE. plugins.

	* Makefile.plugins: updates.

Wed Apr 12 02:35:47 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: added a rule "refresh-Makefile.plugins:" to rebuild the
	Makefile.plugins manually, without listplugins.sh. removed cruft about
	generted enum headers for C plugins. build plugins twice now, once in
	an ordinary "+PLAIN" version, and once with SSE_FLAGS as "+SSE". the
	sse variant is built conditionally. install plugins in "plugins+PLAIN/"
	and "plugins+SSE/" directories. lots of cleanups in the generation rules.

	* listplugins.sh: removed, generation logic was moved into Makefile.am.

	* Makefile.plugins: manual update.

Sat Apr  1 16:59:52 2006  Tim Janik  <timj@gtk.org>

	* freeverb/denormals.h (undenormalise): fix macro name.

Fri Mar 31 23:47:52 2006  Tim Janik  <timj@gtk.org>

	* freeverb/denormals.h: implement undenormalise() as BSE_FLOAT_FLATTEN().
	this is faster and circumvents a gcc bug/optimization that rendered the
	roomsize and damping parameters useless.

Wed Feb 15 23:35:26 2006  Tim Janik  <timj@gtk.org>

	* evaluator/: Building of this plugin has been completely disabled
	because it never left pre-prototype stage, and it contains mallicious